--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     </nav>
   </header>
   <section class="banner">
-    <div class="bg-image drk" style="background-image: url('Assets/img/ship06.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+    <div class="bg-image drk" style="background-image: url('Assets/img/truck07.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
       <h1>
         Contact us
       </h1>
