--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
     <style>
       .banner h1{
         text-align: left;
-      }
-      .banner button{
-        opacity: 0.9;
-        margin-top: 50px;
-      }
-      .banner a{
-        text-decoration: none;
+        width: 40%;
+        margin-left: 200px;
       }
     </style>
 </head>
@@ -66,12 +61,12 @@
 
 <section class="banner">
   <div class="bg-image" style="background-image: url('Assets/img/ship01.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
-    <h1 class="px-5">
+    <h1 class="">
       INDUSTRY LEADING LOGISTICS FIRM
     </h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis molestias.</p>
-      <button class="btn btn-outline-primary"><a href="contact.html">Contact Us</a></button>
-      <button class="btn btn-outline-success"><a href="about.html">Discover More</a></button>
+    <p> Stone Cold Courier is one of Europe leading indigenous logistics company powered by technology with a solid reputation for e-commerce/social commerce-tailored logistics.</p>      
+    <button class="btn btn-outline-primary btn2"><a href="contact.html">Contact Us</a></button>
+    <button class="btn btn-outline-secondary btn3"><a href="about.html">Discover More</a></button>
 </div>
 
 </section>
@@ -123,7 +118,7 @@
     <div class="container py-5">
       <div class="card"> 
           <div class="card-body">
-              <h1 class="text-center font-weight-light py-3">Contact Us</h1>
+              <h1 class="text-center font-weight-light py-3">Get in Touch</h1>
               <div class="row pt-3">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <div class="row">
@@ -175,7 +170,7 @@
     </div>
 </section>
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark " style="color: white;">
+<footer class="text-center text-lg-start bg-dark text-white ">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
@@ -193,16 +188,10 @@
         <i class="fab fa-twitter"></i>
       </a>
       <a href="" class="me-4 link-secondary">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="" class="me-4 link-secondary">
         <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-github"></i>
       </a>
     </div>
     <!-- Right -->
@@ -218,11 +207,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3 text-secondary"></i>Company name
+            <i class="fas fa-gem me-3 text-secondary"></i>Stone Cold Courier
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Stone Cold Courier is one of Europe leading indigenous logistics company powered by technology with a solid reputation for e-commerce/social commerce-tailored logistics.
           </p>
         </div>
         <!-- Grid column -->
@@ -231,19 +219,19 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            Company
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset">About us</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#!" class="text-reset">Services</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#!" class="text-reset">Contact Us</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#!" class="text-reset">Sign Up</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -252,19 +240,19 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
+            Services
           </h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="#!" class="text-reset">Schedule a pick up</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="#!" class="text-reset">Stone cold Alpha</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="#!" class="text-reset">Overseas Shipping</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#!" class="text-reset">Report issues</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -276,7 +264,7 @@
           <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
           <p>
             <i class="fas fa-envelope me-3 text-secondary"></i>
-            info@example.com
+            stonecoldcourier@gmail.com
           </p>
           <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
           <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
@@ -289,9 +277,9 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.5);">
+    © 2023 Stone Cold Courier Ltd,
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">All Rights Reserved</a>
   </div>
   <!-- Copyright -->
 </footer>
