--- a/services.html
+++ b/services.html
@@ -105,7 +105,7 @@
 </section>
 
    <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark " style="color: white;">
+<footer class="text-center text-lg-start bg-dark text-white">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
@@ -212,7 +212,7 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.5);">
     © 2023 Stone Cold Courier Ltd,
     <a class="text-reset fw-bold" href="https://mdbootstrap.com/">All Rights Reserved</a>
   </div>
