--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     
-<header>
+  <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -29,32 +29,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item mx-4">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-4">
               <a class="nav-link" href="about.html">About Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-4">
               <a class="nav-link" href="services.html">Services</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mx-4">
               <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="register.html">Sign Up</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Track</button>
+            <button class="btn btn-primary mx-4" type="submit">Sign Up/ Sign In</button>
           </form>
         </div>
       </div>
     </nav>
   </header>
-  <section class="banner">
-    <div class="bg-image drk" style="background-image: url('Assets/img/truck07.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
+
+  <section class="banner3">
+    <div class="bg-image">
       <h1>
         Contact us
       </h1>
