--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <style>
-      .banner h1{
-        text-align: left;
-        width: 40%;
-        margin-left: 200px;
-      }
-    </style>
 </head>
 <body>
 <header>
@@ -27,41 +20,36 @@
       <a class="navbar-brand" href="#">
         <img src="Assets/img/logo.png" style="height: 50px; width: 50px;" alt="">
         <h2>STONE COLD</h2>
-
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li class="nav-item mx-4">
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="about.html">About Us</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="services.html">Services</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="contact.html">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="register.html">Sign Up</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Input your tracking Id" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Track</button>
+          <button class="btn btn-primary mx-4" type="submit">Sign Up/ Sign In</button>
         </form>
       </div>
     </div>
   </nav>
 </header>
 
-<section class="banner">
-  <div class="bg-image" style="background-image: url('Assets/img/ship01.jpg'); height: 90vh; background-repeat: no-repeat; background-size: cover;">
-    <h1 class="">
+<section class="banner1">
+  <div class="bg-image">
+    <h1 class=" ">
       INDUSTRY LEADING LOGISTICS FIRM
     </h1>
     <p> Stone Cold Courier is one of Europe leading indigenous logistics company powered by technology with a solid reputation for e-commerce/social commerce-tailored logistics.</p>      
@@ -71,11 +59,46 @@
 
 </section>
 
+<section class="about about-1">
+  <div class="container">
+    <h1 class="mt-5">Who we are </h1>
+    <div class="flex-row">
+        <div class="left">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           <div class="flex-row">
+              <i class="fas fa-bullhorm"></i>
+              <div class="intro">
+                <h4>Title 1</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+           </div>
+           <div class="flex-row">
+            <i class="fas fa-bullhorm"></i>
+            <div class="intro">
+              <h4>Title 1</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+         </div>
+         <div class="flex-row">
+          <i class="fas fa-bullhorm"></i>
+          <div class="intro">
+            <h4>Title 1</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+       </div>
+        </div>
+        <div class="right">
+           <img src="Assets/SVG/Traslocatore02.svg" alt="">
+        </div>
+    </div>
+  </div>
+</section>
+
 <section class="mid-section">
         <h1>Seamless delivery services</h1>
         <a href="#" class="card-link">
           <div class="card-container cardboarder-container">
-            <div class="card cardboarder" style="width: 22rem;">
+            <div class="card cardboarder">
               <img src="Assets/img/box.png" alt="">   
               <div class="card-body">
                 <h5 class="card-title">Ship now</h5>
@@ -84,7 +107,7 @@
             </div>
         </a>
         <a href="#" class="card-link">
-          <div class="card cardboarder" style="width: 22rem;">
+          <div class="card cardboarder">
             <img src="Assets/img/world.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Overseas Shipping</h5>
@@ -93,7 +116,7 @@
           </div>
         </a>
         <a href="#" class="card-link">
-          <div class="card cardboarder" style="width: 22rem;">
+          <div class="card cardboarder">
             <img src="Assets/img/message.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Get a Quick Quote</h5>
@@ -102,7 +125,7 @@
           </div>
         </a>
          <a href="#" class="card-link">
-          <div class="card cardboarder" style="width: 22rem;">
+          <div class="card cardboarder">
             <img src="Assets/img/shop.png" alt="">
             <div class="card-body">
               <h5 class="card-title">Alpha mode</h5>
@@ -120,7 +143,7 @@
           <div class="card-body">
               <h1 class="text-center font-weight-light py-3">Get in Touch</h1>
               <div class="row pt-3">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-12 contactinto">
                     <div class="row">
                       <div class="col-lg-10 col-md-2 col-sm-2 col-2">
                           <span style="font-size: 40px; ; color: cadetblue;"><i class="fa-sharp fa-solid fa-location-dot"></i></span>
